--- a/03 JS/Day-13/index.html
+++ b/03 JS/Day-13/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body class="third">
+<body >
     
         <h1 id="first" style="background-color: brown; color: yellow;">Strike is coming soon on 
             <span style="display: none;"> 18 october</span></h1>
-        <h2 id="second">It is no dhantesus</h2>
+        <h2 class="third" id="second">It is no dhantesus</h2>
         
         <ul>
             <li>fridge</li>
@@ -18,4 +18,5 @@
         </ul>
 
 </body>
+
 </html>
