--- a/03 JS/Day-13/index.html
+++ b/03 JS/Day-13/index.html
@@ -10,6 +10,7 @@
         <h1 id="first" style="background-color: brown; color: yellow;">Strike is coming soon on 
             <span style="display: none;"> 18 october</span></h1>
         <h2 class="third" id="second">It is no dhantesus</h2>
+        <h2> hello ji</h2>
         
         <ul>
             <li>fridge</li>
@@ -20,3 +21,4 @@
 </body>
 
 </html>
+
